# java-typescript-bazel

./: .bazelignore  .bazelrc  .gitignore  .npmrc  BUILD.bazel  DWP_CV_Srikanth_Arunachalam.docx  DWP_CoverLetter_Srikanth_Arunachalam.docx  DWP_INTERVIEW_PREP.md  MODULE.bazel  README.md  catalog-info.yaml  generate_dwp_documents.py  jest.config.js  package.json  tsconfig.json  tsconfig.test.json
.backup_before_replacements/: BACKSTAGE_PLUGIN_GUIDE.md.bak  BACKSTAGE_QUICKSTART.md.bak  DWP_GITLAB_CI_QUESTIONS.md.bak  SHOWCASE.md.bak  analyze_build.py.bak  dependency_graph.py.bak  deployment-java-service.yaml.bak  docker-compose.yml.bak
.github/workflows/: ci.yml
.ijwb/: .bazelproject  modules.xml
build_tools/: BUILD.bazel
build_tools/analysis/: bazel_utils.py  test_selector.py
build_tools/java/: BUILD.bazel  auto_test.bzl  dependency_analyzer.bzl
build_tools/typescript/: BUILD.bazel  ts_project_enhanced.bzl
docker/: BUILD.bazel  README.md
docker/kubernetes/: deployment-typescript-service.yaml
docker/scripts/: build-and-load.sh
github_test/: README.md
java/com/example/userservice/: BUILD.bazel
java/com/example/userservice/api/: UserApi.java
java/com/example/userservice/model/: User.java
java/com/example/userservice/repository/: UserRepository.java
java/com/example/userservice/service/: UserService.java
java/com/example/userservice/test/: UserServiceTest.java
