"""
Docker container definitions using rules_oci.

This demonstrates:
- Multi-stage builds with distroless images
- Java JRE container for microservices
- Node.js container for TypeScript services
- Efficient layering for optimal caching
- Production-ready container configurations
"""

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# ==============================================================================
# Java Microservice Container
# ==============================================================================

# Package Java application into a tar
pkg_tar(
    name = "java_service_layer",
    srcs = [
        "//java/com/example/userservice:userservice",
    ],
    package_dir = "/app",
)

# Create OCI image for Java service
oci_image(
    name = "java_service_image",
    base = "@distroless_java21",
    entrypoint = [
        "java",
        "-XX:+UseG1GC",
        "-XX:MaxRAMPercentage=75.0",
        "-jar",
        "/app/userservice.jar",
    ],
    tars = [":java_service_layer"],
    env = {
        "JAVA_TOOL_OPTIONS": "-Djava.security.egd=file:/dev/./urandom",
        "APP_ENV": "production",
        "LOG_LEVEL": "INFO",
    },
    exposed_ports = ["8080"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/your-org/enterprise-monorepo",
        "org.opencontainers.image.description": "User Service - Java Microservice",
        "org.opencontainers.image.vendor": "Enterprise",
        "maintainer": "devops@example.com",
    },
    visibility = ["//visibility:public"],
)

# Export image as tarball for local testing
oci_tarball(
    name = "java_service_tarball",
    image = ":java_service_image",
    repo_tags = [
        "enterprise/user-service:latest",
        "enterprise/user-service:v1.0.0",
    ],
)

# Push to container registry (configure registry in .bazelrc.user)
oci_push(
    name = "java_service_push",
    image = ":java_service_image",
    repository = "gcr.io/your-project/user-service",
    remote_tags = ["latest", "v1.0.0"],
)

# ==============================================================================
# TypeScript API Client Container (Node.js service example)
# ==============================================================================

# Package TypeScript/Node.js application
pkg_tar(
    name = "typescript_service_layer",
    srcs = [
        "//typescript/packages/api-client:api-client",
    ],
    package_dir = "/app",
)

# Node.js dependencies layer (cached separately)
pkg_tar(
    name = "node_modules_layer",
    srcs = ["//:node_modules"],
    package_dir = "/app/node_modules",
)

# Create OCI image for TypeScript service
oci_image(
    name = "typescript_service_image",
    base = "@distroless_nodejs20",
    entrypoint = ["node", "/app/index.js"],
    tars = [
        ":node_modules_layer",
        ":typescript_service_layer",
    ],
    env = {
        "NODE_ENV": "production",
        "NODE_OPTIONS": "--max-old-space-size=2048",
    },
    exposed_ports = ["3000"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/your-org/enterprise-monorepo",
        "org.opencontainers.image.description": "API Client Service - TypeScript/Node.js",
        "org.opencontainers.image.vendor": "Enterprise",
    },
    visibility = ["//visibility:public"],
)

# Export as tarball
oci_tarball(
    name = "typescript_service_tarball",
    image = ":typescript_service_image",
    repo_tags = [
        "enterprise/api-client:latest",
        "enterprise/api-client:v1.0.0",
    ],
)

# ==============================================================================
# Development Container with debugging tools
# ==============================================================================

# Development image based on Ubuntu with debugging tools
oci_image(
    name = "dev_image",
    base = "@docker_ubuntu",
    entrypoint = ["/bin/bash"],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    labels = {
        "org.opencontainers.image.description": "Development container with debugging tools",
    },
)

oci_tarball(
    name = "dev_tarball",
    image = ":dev_image",
    repo_tags = ["enterprise/dev-tools:latest"],
)

# ==============================================================================
# Multi-service compose deployment (using tarball outputs)
# ==============================================================================

filegroup(
    name = "all_images",
    srcs = [
        ":java_service_tarball",
        ":typescript_service_tarball",
    ],
    visibility = ["//visibility:public"],
)
